--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="password" name="password" id="password" /><br><br>
             <div class="container__form--buttons">
                 <button id="button" name="button">Entrar</button>
-                <a href="">Registrate</a>
+                <a href="registrarse.html">Registrate</a>
             </div>
         </form>
     </div>
