--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </form>
     </div>
 </section>
-    <script
+    <!-- <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 </body>
 </html>
