agregando estilos a pagina registrarse

--- a/registrarse.html
+++ b/registrarse.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <section class="section-left">
-
+        <div class="section-left__container">
+            <form action="" class="section-left__container--form" method="POST">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" id="nombre">
+                <label for="apellidos">Apellidos</label>
+                <input type="text" name="apellidos" id="apellidos">
+                <label for="e-mail">Correo electrónico</label>
+                <input type="email" name="e-mail" id="e-mail">
+                <label for="e-mail2">Confirmar correo electrónico</label>
+                <input type="email" name="e-mail2" id="e-mail2">
+                <label for="usuario">Usuario</label>
+                <input type="text" name="usuario" id="usuario">
+                <label for="passw">Contraseña</label>
+                <input type="password" name="passw" id="passw">
+                <label for="passw2">Confirmar contraseña</label>
+                <input type="password" name="passw2" id="passw2">
+            </form>
+        </div>
     </section>   
     <section class="section">
         <div class="section__container">
